--- a/client/storedialog.html
+++ b/client/storedialog.html
@@ -6,148 +6,300 @@
     <title>Store Menu</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-        :root { font-family: 'Inter', sans-serif; }
-        ::-webkit-scrollbar { width: 5px; }
-        ::-webkit-scrollbar-track { background: #f1f1f1; }
-        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        .fade-in { animation: fade .3s ease-in; }
+        @keyframes fade { from{opacity:0;transform:translateY(5px)} to{opacity:1} }
         body { padding-bottom: 100px; }
     </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-100">
 
-    <!-- HEADER -->
-    <header class="bg-gradient-to-r from-blue-600 to-blue-700 text-white p-6 shadow-lg sticky top-0 z-40">
-        <div class="flex justify-between items-center max-w-6xl mx-auto">
+    <!-- ================= HEADER ================= -->
+    <header class="bg-blue-600 text-white p-6 shadow sticky top-0 z-40">
+        <div class="flex justify-between items-center">
             <div>
                 <h1 id="storeName" class="text-3xl font-bold"></h1>
-                <p id="storeType" class="text-blue-100 mt-1"></p>
+                <p id="storeType" class="text-blue-100"></p>
             </div>
-            <button onclick="history.back()" class="bg-white text-blue-600 px-4 py-2 rounded-lg font-semibold hover:bg-gray-100 transition">
-                ← Back
-            </button>
+            <div class="flex gap-3">
+                <button onclick="toggleFavorite()" class="bg-white text-blue-600 px-4 py-2 rounded-lg font-semibold hover:bg-gray-100 transition" id="favBtn">
+                    ❤️ Favorite
+                </button>
+                <button onclick="history.back()" class="bg-white text-blue-600 px-4 py-2 rounded-lg font-semibold hover:bg-gray-100 transition">
+                    ← Back
+                </button>
+            </div>
         </div>
 
-        <div class="flex flex-wrap gap-3 mt-4 text-sm max-w-6xl mx-auto">
+        <img id="storeImage" class="mt-4 rounded-xl w-full h-48 object-cover">
+
+        <div class="flex gap-3 mt-4 text-sm flex-wrap">
             <span id="rating" class="bg-yellow-400 text-blue-600 px-3 py-1 rounded-full font-semibold"></span>
-            <span id="deliveryTime" class="bg-white bg-opacity-20 text-white px-3 py-1 rounded-full">📦</span>
-            <span id="deliveryFee" class="bg-white bg-opacity-20 text-white px-3 py-1 rounded-full">🚚</span>
-            <span id="minOrder" class="bg-white bg-opacity-20 text-white px-3 py-1 rounded-full">Min Order</span>
+            <span id="deliveryTime" class="bg-white bg-opacity-20 px-3 py-1 rounded-full"></span>
+            <span id="deliveryFee" class="bg-white bg-opacity-20 px-3 py-1 rounded-full"></span>
         </div>
     </header>
 
-    <!-- MENU -->
-    <main class="p-6 max-w-6xl mx-auto">
-        <div class="mb-8">
-            <h2 class="text-2xl font-bold mb-6 text-slate-800">📋 Full Menu</h2>
-            <div id="menuContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
-        </div>
+    <!-- ================= SEARCH ================= -->
+    <div class="p-4 bg-white shadow">
+        <input id="searchInput" type="text" placeholder="🔍 Search menu..." class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+    </div>
+
+    <!-- ================= CATEGORY TABS ================= -->
+    <div class="flex gap-2 p-4 bg-gray-50 overflow-x-auto sticky top-20 z-30">
+        <button onclick="setCategory('meals')" class="tab px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold whitespace-nowrap transition">🍽️ Meals</button>
+        <button onclick="setCategory('drinks')" class="tab px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold whitespace-nowrap hover:bg-gray-300 transition">🥤 Drinks</button>
+        <button onclick="setCategory('desserts')" class="tab px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold whitespace-nowrap hover:bg-gray-300 transition">🍰 Desserts</button>
+    </div>
+
+    <!-- ================= MENU ================= -->
+    <main class="p-6 max-w-5xl mx-auto">
+        <h2 class="text-2xl font-bold mb-4 text-gray-800">Menu Items</h2>
+        <div id="menuContainer" class="space-y-3"></div>
     </main>
 
-    <!-- CART BAR -->
+    <!-- ================= REVIEWS ================= -->
+    <section class="bg-white p-6 shadow mt-6 max-w-5xl mx-auto rounded-xl">
+        <h2 class="font-bold text-xl mb-4">⭐ Customer Reviews</h2>
+        <div class="space-y-3 text-sm">
+            <div class="flex items-start gap-3 pb-3 border-b">
+                <span class="text-2xl">⭐⭐⭐⭐⭐</span>
+                <div>
+                    <p class="font-semibold">Amazing food! Fast delivery.</p>
+                    <p class="text-gray-600">- John D.</p>
+                </div>
+            </div>
+            <div class="flex items-start gap-3 pb-3 border-b">
+                <span class="text-2xl">⭐⭐⭐⭐</span>
+                <div>
+                    <p class="font-semibold">Very tasty, will order again!</p>
+                    <p class="text-gray-600">- Sarah M.</p>
+                </div>
+            </div>
+            <div class="flex items-start gap-3">
+                <span class="text-2xl">⭐⭐⭐⭐⭐</span>
+                <div>
+                    <p class="font-semibold">Best store in the city!</p>
+                    <p class="text-gray-600">- Alex K.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ================= CART BAR ================= -->
     <div class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 shadow-lg p-4">
-        <div class="max-w-6xl mx-auto flex justify-between items-center">
+        <div class="max-w-5xl mx-auto flex justify-between items-center">
             <div>
-                <p class="text-gray-600 text-sm">Cart Total:</p>
+                <p class="text-gray-600 text-sm">Cart Items: <span id="cartCount" class="font-bold">0</span></p>
                 <p class="font-bold text-2xl text-blue-600">₱<span id="cartTotal">0</span></p>
             </div>
-            <button onclick="checkout()" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-3 rounded-lg font-bold transition shadow-lg">
-                🛒 Checkout
-            </button>
+            <div class="flex gap-3">
+                <button onclick="viewCart()" class="bg-gray-200 hover:bg-gray-300 text-gray-800 px-6 py-3 rounded-lg font-bold transition">
+                    👁️ View Cart
+                </button>
+                <button onclick="checkout()" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-bold transition shadow-lg">
+                    🛒 Checkout
+                </button>
+            </div>
         </div>
     </div>
 
     <script>
-        // ===== STORE DATA FROM URL =====
+        /* ================= STORE DATA FROM URL ================= */
         const params = new URLSearchParams(window.location.search);
 
-        document.getElementById("storeName").textContent = params.get("name") || "Store";
-        document.getElementById("storeType").textContent = params.get("type") || "Food";
-        document.getElementById("rating").textContent = "⭐ " + (params.get("rating") || "4.5");
-        document.getElementById("deliveryTime").textContent = "📦 " + (params.get("time") || "30 mins");
-        document.getElementById("deliveryFee").textContent = "🚚 " + (params.get("fee") || "₱40");
-        document.getElementById("minOrder").textContent = "Min: " + (params.get("min") || "₱150");
+        const storeName = params.get("name") || "Store";
+        const storeType = params.get("type") || "Menu";
+        const rating = params.get("rating") || "4.8";
+        const deliveryTime = params.get("time") || "20-30 mins";
+        const deliveryFee = params.get("fee") || "₱40";
 
-        // ===== SAMPLE MENU DATABASE =====
-        const menuItems = [
-            { id: 1, name: "Signature Dish", price: 299, desc: "Chef's special creation", img: "🍽️" },
-            { id: 2, name: "Classic Combo", price: 449, desc: "Perfect for 1 person", img: "🍴" },
-            { id: 3, name: "Premium Meal", price: 599, desc: "Deluxe with sides", img: "🥘" },
-            { id: 4, name: "Seasonal Special", price: 349, desc: "Limited time offer", img: "🌟" },
-            { id: 5, name: "Family Bundle", price: 899, desc: "Feeds 4 people", img: "👨‍👩‍👧‍👦" },
-            { id: 6, name: "Appetizer Platter", price: 399, desc: "Mix of starters", img: "🥗" },
-            { id: 7, name: "Dessert Selection", price: 249, desc: "Sweet treats", img: "🍰" },
-            { id: 8, name: "Beverage Combo", price: 179, desc: "3 drinks included", img: "🥤" }
+        document.getElementById("storeName").textContent = storeName;
+        document.getElementById("storeType").textContent = storeType;
+        document.getElementById("rating").textContent = "⭐ " + rating + " Rating";
+        document.getElementById("deliveryTime").textContent = "📦 " + deliveryTime;
+        document.getElementById("deliveryFee").textContent = "🚚 " + deliveryFee;
+
+        // Store image - random food image from Unsplash
+        const foodImages = [
+            "https://images.unsplash.com/photo-1555939594-58d7cb561137?w=800&h=400&fit=crop",
+            "https://images.unsplash.com/photo-1495521821757-a1efb6729352?w=800&h=400&fit=crop",
+            "https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=800&h=400&fit=crop",
+            "https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=800&h=400&fit=crop"
         ];
+        document.getElementById("storeImage").src = foodImages[Math.floor(Math.random() * foodImages.length)];
 
-        let cart = {};
-        let cartTotal = 0;
+        /* ================= ADMIN EDITABLE MENU DATABASE ================= */
+        const menuDB = {
+            meals: [
+                { name: "Signature Meal", price: 299, desc: "Chef's special creation" },
+                { name: "Classic Combo", price: 449, desc: "Perfect for one person" },
+                { name: "Premium Plate", price: 599, desc: "Deluxe with premium sides" },
+                { name: "Family Bundle", price: 899, desc: "Feeds 4 people" },
+                { name: "Garden Salad", price: 249, desc: "Fresh vegetables" }
+            ],
+            drinks: [
+                { name: "Iced Coffee", price: 120, desc: "Cold brew coffee" },
+                { name: "Milk Tea", price: 150, desc: "Creamy milk tea" },
+                { name: "Fresh Juice", price: 140, desc: "Orange or mango" },
+                { name: "Iced Lemonade", price: 110, desc: "Refreshing citrus" }
+            ],
+            desserts: [
+                { name: "Chocolate Cake", price: 180, desc: "Rich chocolate layers" },
+                { name: "Cheesecake", price: 220, desc: "Creamy NY style" },
+                { name: "Ice Cream Bowl", price: 150, desc: "3 flavors mixed" },
+                { name: "Brownie Sundae", price: 190, desc: "Warm brownie with ice cream" }
+            ]
+        };
 
-        // ===== RENDER MENU =====
-        const container = document.getElementById("menuContainer");
+        /* ================= STATE ================= */
+        let category = "meals";
+        let cart = JSON.parse(localStorage.getItem("cart") || "[]");
 
-        menuItems.forEach(item => {
-            const card = document.createElement("div");
-            card.className = "bg-white rounded-xl shadow-sm hover:shadow-lg transition-all border border-gray-200 overflow-hidden";
+        /* ================= MENU RENDER ================= */
+        function renderMenu() {
+            const search = document.getElementById("searchInput").value.toLowerCase();
+            const container = document.getElementById("menuContainer");
+            container.innerHTML = "";
 
-            card.innerHTML = `
-                <div class="p-4">
-                    <div class="text-4xl mb-3">${item.img}</div>
-                    <h3 class="font-bold text-lg text-slate-800">${item.name}</h3>
-                    <p class="text-sm text-gray-600 mb-3">${item.desc}</p>
-                    <div class="flex justify-between items-center">
-                        <span class="text-2xl font-bold text-blue-600">₱${item.price}</span>
+            const filtered = menuDB[category].filter(item => 
+                item.name.toLowerCase().includes(search)
+            );
+
+            if (filtered.length === 0) {
+                container.innerHTML = '<p class="text-gray-500 text-center py-8">No items found</p>';
+                return;
+            }
+
+            filtered.forEach(item => {
+                const card = document.createElement("div");
+                card.className = "bg-white p-4 rounded-lg shadow fade-in flex justify-between items-center border border-gray-200 hover:shadow-lg transition";
+
+                card.innerHTML = `
+                    <div class="flex-1">
+                        <h3 class="font-semibold text-lg text-gray-800">${item.name}</h3>
+                        <p class="text-sm text-gray-600">${item.desc}</p>
+                        <p class="text-blue-600 font-bold text-lg mt-2">₱${item.price}</p>
+                    </div>
+
+                    <div class="flex items-center gap-2 ml-4">
+                        <input type="number" min="1" value="1" class="qty w-14 border border-gray-300 rounded px-2 py-1 text-center focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg font-semibold transition">
                             + Add
                         </button>
                     </div>
-                </div>
-            `;
+                `;
 
-            card.querySelector("button").onclick = () => addToCart(item.id, item.name, item.price);
-            container.appendChild(card);
-        });
+                card.querySelector("button").onclick = () => {
+                    const qty = parseInt(card.querySelector(".qty").value);
+                    for (let i = 0; i < qty; i++) {
+                        cart.push(item);
+                    }
+                    saveCart();
+                    showNotification(`✅ Added ${qty}x ${item.name}`);
+                };
 
-        // ===== CART FUNCTIONS =====
-        function addToCart(id, name, price) {
-            if (cart[id]) {
-                cart[id].qty += 1;
+                container.appendChild(card);
+            });
+        }
+
+        /* ================= CATEGORY SWITCH ================= */
+        function setCategory(cat) {
+            category = cat;
+
+            document.querySelectorAll(".tab").forEach(t => {
+                t.classList.remove("bg-blue-600", "text-white");
+                t.classList.add("bg-gray-200", "text-gray-700");
+            });
+
+            event.target.classList.remove("bg-gray-200", "text-gray-700");
+            event.target.classList.add("bg-blue-600", "text-white");
+
+            renderMenu();
+        }
+
+        /* ================= CART FUNCTIONS ================= */
+        function saveCart() {
+            localStorage.setItem("cart", JSON.stringify(cart));
+            updateCartDisplay();
+        }
+
+        function updateCartDisplay() {
+            const total = cart.reduce((t, i) => t + i.price, 0);
+            document.getElementById("cartTotal").textContent = total;
+            document.getElementById("cartCount").textContent = cart.length;
+        }
+
+        function viewCart() {
+            if (cart.length === 0) {
+                alert("❌ Cart is empty!");
+                return;
+            }
+            // Store cart in localStorage for cart.html to access
+            window.location.href = "cart.html";
+        }
+
+        /* ================= FAVORITES ================= */
+        function toggleFavorite() {
+            const favs = JSON.parse(localStorage.getItem("favorites") || "[]");
+            
+            if (favs.includes(storeName)) {
+                favs.splice(favs.indexOf(storeName), 1);
+                document.getElementById("favBtn").textContent = "🤍 Favorite";
+                showNotification("❌ Removed from favorites");
             } else {
-                cart[id] = { name, price, qty: 1 };
+                favs.push(storeName);
+                document.getElementById("favBtn").textContent = "❤️ Favorited";
+                showNotification("✅ Added to favorites!");
             }
 
-            cartTotal += price;
-            document.getElementById("cartTotal").textContent = cartTotal;
-
-            // Show success toast
-            showToast(`✅ "${name}" added to cart!`);
+            localStorage.setItem("favorites", JSON.stringify(favs));
         }
 
-        function showToast(message) {
-            const toast = document.createElement('div');
-            toast.className = 'fixed bottom-32 left-1/2 transform -translate-x-1/2 bg-green-500 text-white px-6 py-3 rounded-lg shadow-lg font-semibold';
-            toast.textContent = message;
-            document.body.appendChild(toast);
-
-            setTimeout(() => toast.remove(), 2000);
+        // Check if store is already favorited
+        function checkFavorite() {
+            const favs = JSON.parse(localStorage.getItem("favorites") || "[]");
+            if (favs.includes(storeName)) {
+                document.getElementById("favBtn").textContent = "❤️ Favorited";
+            }
         }
 
+        /* ================= NOTIFICATIONS ================= */
+        function showNotification(message) {
+            const notif = document.createElement("div");
+            notif.className = "fixed bottom-32 left-1/2 transform -translate-x-1/2 bg-gray-900 text-white px-6 py-3 rounded-lg shadow-lg font-semibold z-50";
+            notif.textContent = message;
+            document.body.appendChild(notif);
+
+            setTimeout(() => notif.remove(), 2000);
+        }
+
+        /* ================= SEARCH ================= */
+        document.getElementById("searchInput").addEventListener("input", renderMenu);
+
+        /* ================= CHECKOUT ================= */
         function checkout() {
-            if (cartTotal === 0) {
+            if (cart.length === 0) {
                 alert("❌ Cart is empty! Add some items first.");
                 return;
             }
 
-            // Store cart data in sessionStorage for cart.html to access
-            sessionStorage.setItem('cartData', JSON.stringify({
+            const total = cart.reduce((t, i) => t + i.price, 0);
+            alert(`✅ Proceeding to checkout...\n\nStore: ${storeName}\nItems: ${cart.length}\nTotal: ₱${total}`);
+
+            // Store order info for checkout.html
+            sessionStorage.setItem("orderData", JSON.stringify({
+                store: storeName,
                 items: cart,
-                total: cartTotal,
-                store: params.get("name")
+                total: total
             }));
 
-            alert(`✅ Proceeding to checkout...\nTotal: ₱${cartTotal}`);
-            window.location.href = "cart.html";
+            window.location.href = "checkout.html";
         }
+
+        /* ================= INITIALIZATION ================= */
+        updateCartDisplay();
+        renderMenu();
+        checkFavorite();
     </script>
 
 </body>
