--- a/Store/dashboard.html
+++ b/Store/dashboard.html
@@ -36,13 +36,6 @@
             <button onclick="switchTab('profile')" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100"><i data-lucide="user" class="w-5 h-5"></i> Profile</button>
         </nav>
         <div class="p-4 border-t border-gray-100 space-y-3">
-            <div class="flex items-center justify-between">
-                <span class="text-xs font-semibold text-slate-700 uppercase">Role</span>
-                <select id="roleToggle" onchange="switchRole(this.value)" class="bg-blue-100 text-blue-700 rounded-lg px-2 py-1 text-xs font-bold border border-blue-300">
-                    <option value="admin">Admin</option>
-                    <option value="staff">Staff</option>
-                </select>
-            </div>
             <button onclick="logout()" class="w-full flex items-center gap-3 p-3 rounded-xl text-red-500 hover:bg-red-50 transition-colors"><i data-lucide="log-out" class="w-5 h-5"></i> Logout</button>
         </div>
     </aside>
@@ -65,7 +58,13 @@
                     <button onclick="toggleAdminMenu()" class="flex items-center gap-3 pl-5 border-l"><img src="https://ui-avatars.com/api/?name=Admin&background=0D8ABC&color=fff" class="w-8 h-8 rounded-full shadow-sm"><span class="text-sm font-medium text-slate-700">Store <span id="roleLabel">Admin</span></span><i data-lucide="chevron-down" class="w-4 h-4 text-slate-400"></i></button>
                     <div id="adminMenu" class="hidden absolute right-0 mt-4 w-56 bg-white rounded-2xl shadow-xl border z-50">
                         <button onclick="openSettingsModal()" class="w-full flex items-center gap-3 p-4 hover:bg-slate-50"><i data-lucide="settings" class="w-4 h-4"></i> Store Settings</button>
-                        <button class="w-full flex items-center gap-3 p-4 hover:bg-slate-50"><i data-lucide="shield" class="w-4 h-4"></i> Security</button>
+                        <div class="p-4 border-t border-gray-100 flex items-center justify-between">
+                            <span class="text-xs font-semibold text-slate-700 uppercase">Role</span>
+                            <select id="roleToggle" onchange="switchRole(this.value)" class="bg-blue-100 text-blue-700 rounded-lg px-2 py-1 text-xs font-bold border border-blue-300">
+                                <option value="admin">Admin</option>
+                                <option value="staff">Staff</option>
+                            </select>
+                        </div>
                         <button onclick="logout()" class="w-full flex items-center gap-3 p-4 text-red-500 hover:bg-red-50"><i data-lucide="log-out" class="w-4 h-4"></i> Logout</button>
                     </div>
                 </div>
